# verrus2

./: LICENCE  Pag.py  afk.json  audit_logs_bot test :D  audit_logs_♤♡HIGHSIDERS♡♤  docs.md  editor.py  empty.py  interface.py  keep_alive.py  main.py  main2.py  pyproject.toml  test.json  weather.py
auditlogs/: audit_logs_♧◇HIGHSIDERS♤♡  audit_logs_♧◇HIGHSIDERS♤♡.txt
bot_config/: blacklist.json  secrets.json
chatbotTemplate/: chatbottemplate.template
cogs/: Main_Cog.py  afk.json  afk.py  ai.py  bot2.py  dubdadub.py  entir.py
