[tool.poetry]
name = "verrus2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pyfiglet = "^0.8.post1"
replit = "^3.0.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"
translate = "^3.5.0"
django-buttons = "^0.9.2"
buttons = "^0.1.9"
chatbot-py = "^2.74"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
